--- a/index.html
+++ b/index.html
@@ -1,60 +1,146 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/teritorio.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>OpenStreeMap logical history component</title>
-    <style>
-      html,
-      body {
-        height: 100%;
-        margin: 0;
-        font-family: 'Noto Sans';
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/png" href="/teritorio.png" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>OpenStreetMap Logical History Component</title>
+  <style>
+    html,
+    body {
+      height: 100%;
+      margin: 0;
+      font-family: 'Noto Sans', sans-serif;
+    }
+
+    header {
+      background-color: #082e4e;
+      color: #fff;
+      display: flex;
+      align-items: center;
+      padding: 0 16px;
+      height: 64px;
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    }
+
+    header img {
+      height: 40px;
+      width: 40px;
+    }
+
+    header h1 {
+      font-size: 20px;
+      margin-left: 16px;
+    }
+
+    main {
+      display: flex;
+      height: calc(100vh - 64px);
+    }
+
+    aside {
+      width: 300px;
+      background-color: #f8f9fa;
+      border-right: 1px solid #ddd;
+      padding: 16px;
+      box-sizing: border-box;
+    }
+
+    aside form {
+      display: flex;
+      flex-direction: column;
+      gap: 16px;
+    }
+
+    aside form div {
+      display: flex;
+      flex-direction: column;
+    }
+
+    aside label {
+      margin-bottom: 8px;
+      font-weight: bold;
+      color: #333;
+    }
+
+    aside input,
+    aside [type="submit"] {
+      padding: 8px;
+      border: 1px solid #ddd;
+      border-radius: 4px;
+      font-size: 14px;
+    }
+
+    aside input {
+      background: #fff;
+    }
+
+    aside [type="submit"] {
+      font-family: inherit;
+      border: none;
+      background: #082e4e;
+      color: #fff;
+      cursor: pointer;
+    }
+
+    #map {
+      flex: 1;
+    }
+
+    @media (max-width: 768px) {
+      aside {
+        width: 100%;
+        border-right: none;
+        border-bottom: 1px solid #ddd;
       }
 
-      #map {
-        height: calc(100vh - 64px);
+      main {
+        flex-direction: column;
       }
+    }
+  </style>
+</head>
 
-      header {
-        background-color: #082e4e;
-        color: #ffffff;
-        display: flex;
-        align-items: center;
-        gap: 8px;
-        padding: 8px;
-        height: 48px;
-      }
+<body>
+  <header>
+    <img src="/teritorio.png" alt="Logo Teritorio" />
+    <h1>OpenStreetMap LoCha Component - Demo</h1>
+  </header>
+  <main>
+    <aside>
+      <form action="">
+        <div>
+          <label for="startDate">From:</label>
+          <input id="startDate" type="date" name="startDate" required>
+        </div>
+        <div>
+          <label for="endDate">To:</label>
+          <input id="endDate" type="date" name="endDate" required>
+        </div>
+        <div>
+          <label for="bbox">Bounding Box:</label>
+          <input id="bbox" type="text" name="bbox" placeholder="lat1, lon1, lat2, lon2"
+            pattern="^[-+]?\d{1,2}\.\d{1,6},\s?[-+]?\d{1,3}\.\d{1,6},\s?[-+]?\d{1,2}\.\d{1,6},\s?[-+]?\d{1,3}\.\d{1,6}$"
+            required>
+        </div>
+        <button type="submit">
+          Apply
+        </button>
+      </form>
+    </aside>
+    <div id="map"></div>
+  </main>
+  <script type="module">
+    import maplibregl from 'maplibre-gl';
+    import 'maplibre-gl/dist/maplibre-gl.css';
 
-      h1 {
-        font-size: 24px;
-        margin: 0;
-      }
+    const map = new maplibregl.Map({
+      hash: true,
+      container: "map",
+      style: 'https://api.maptiler.com/maps/openstreetmap/style.json?key=IJyLukjfd91xJcN3933f'
+    });
+  </script>
+</body>
 
-      header img {
-        height: 48px;
-        width: 48px;
-      }
-    </style>
-  </head>
-  <body>
-    <header>
-      <img src="/teritorio.png" alt="Logo Teritorio" />
-      <h1>OpenStreeMap LoCha Component - Demo</h1>
-    </header>
-    <main>
-      <div id="map"></div>
-    </main>
-    <script type="module">
-      import maplibregl from 'maplibre-gl'
-      import 'maplibre-gl/dist/maplibre-gl.css'
-
-      const map = new maplibregl.Map({
-        hash: true,
-        container: "map",
-        style: 'https://api.maptiler.com/maps/openstreetmap/style.json?key=IJyLukjfd91xJcN3933f'
-      });
-    </script>
-  </body>
 </html>
