--- a/index.html
+++ b/index.html
@@ -109,20 +109,20 @@
   </header>
   <main>
     <aside>
-      <form action="">
+      <form id="searchForm">
         <div>
-          <label for="startDate">From:</label>
-          <input id="startDate" type="date" name="startDate" required>
+          <label for="date_start">From:</label>
+          <input id="date_start" type="date" name="date_start">
         </div>
         <div>
-          <label for="endDate">To:</label>
-          <input id="endDate" type="date" name="endDate" required>
+          <label for="date_end">To:</label>
+          <input id="date_end" type="date" name="date_end">
         </div>
         <div>
           <label for="bbox">Bounding Box:</label>
           <input id="bbox" type="text" name="bbox" placeholder="lat1, lon1, lat2, lon2"
             pattern="^[-+]?\d{1,2}\.\d{1,6},\s?[-+]?\d{1,3}\.\d{1,6},\s?[-+]?\d{1,2}\.\d{1,6},\s?[-+]?\d{1,3}\.\d{1,6}$"
-            required>
+          >
         </div>
         <button type="submit">
           Apply
@@ -139,6 +139,48 @@
       hash: true,
       container: "map",
       style: 'https://api.maptiler.com/maps/openstreetmap/style.json?key=IJyLukjfd91xJcN3933f'
+    });
+
+    // Add event listener for form submission
+    const form = document.getElementById("searchForm");
+
+    form.addEventListener("submit", async (event) => {
+      event.preventDefault(); // Prevent form from reloading the page
+
+      // Get input values
+      const date_start = document.getElementById("date_start").value;
+      const date_end = document.getElementById("date_end").value;
+      const bbox = document.getElementById("bbox").value;
+
+      // Construct the query parameters
+      const params = new URLSearchParams({
+        date_start,
+        date_end,
+        bbox
+      });
+
+      // Construct the full API URL with query parameters
+      const apiUrl = `https://osm-logical-history-dev.teritorio.xyz/api/0.1/overpass_logical_history`;
+
+      try {
+        // Send a POST request to the API endpoint
+        const response = await fetch(apiUrl, {
+          method: 'GET'
+        });
+
+        if (!response.ok) {
+          throw new Error('API request failed');
+        }
+
+        const data = await response.json();
+        console.log(data); // Handle the response, e.g., display on the map or in a UI
+
+        // For example, you can update the map with the new data
+        // (this part depends on what the API returns)
+
+      } catch (error) {
+        console.error('Error:', error);
+      }
     });
   </script>
 </body>
