feat(vite): add api proxy

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
       });
 
       // Construct the full API URL with query parameters
-      const apiUrl = `https://osm-logical-history-dev.teritorio.xyz/api/0.1/overpass_logical_history`;
+      const apiUrl = `/api/0.1/overpass_logical_history`;
 
       try {
         // Send a POST request to the API endpoint
