--- a/demo/index.html
+++ b/demo/index.html
@@ -139,7 +139,7 @@
         <div>
           <label for="bbox">Bounding Box:</label>
           <input id="bbox" type="text" name="bbox" placeholder="lat1, lon1, lat2, lon2"
-            pattern="^[-+]?\d{1,2}\.\d{1,6},\s?[-+]?\d{1,3}\.\d{1,6},\s?[-+]?\d{1,2}\.\d{1,6},\s?[-+]?\d{1,3}\.\d{1,6}$"
+            pattern="^-?\d+\.\d+,-?\d+\.\d+,-?\d+\.\d+,-?\d+\.\d+$"
             required
           >
         </div>
