--- a/demo/index.html
+++ b/demo/index.html
@@ -5,124 +5,14 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/png" href="/teritorio.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>OpenStreetMap Logical History Component</title>
-  <style>
-    html,
-    body {
-      height: 100%;
-      margin: 0;
-      font-family: 'Noto Sans', sans-serif;
-    }
-
-    header {
-      background-color: #082e4e;
-      color: #fff;
-      display: flex;
-      align-items: center;
-      padding: 0 16px;
-      height: 64px;
-      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    }
-
-    header img {
-      height: 40px;
-      width: 40px;
-    }
-
-    header h1 {
-      font-size: 20px;
-      margin-left: 16px;
-    }
-
-    main {
-      display: flex;
-      height: calc(100vh - 64px);
-    }
-
-    aside {
-      width: 300px;
-      background-color: #f8f9fa;
-      border-right: 1px solid #ddd;
-      padding: 16px;
-      box-sizing: border-box;
-    }
-
-    aside form {
-      display: flex;
-      flex-direction: column;
-      gap: 16px;
-    }
-
-    aside form div {
-      display: flex;
-      flex-direction: column;
-    }
-
-    aside label {
-      margin-bottom: 8px;
-      font-weight: bold;
-      color: #333;
-    }
-
-    aside input,
-    aside [type="submit"] {
-      padding: 8px;
-      border: 1px solid #ddd;
-      border-radius: 4px;
-      font-size: 14px;
-    }
-
-    aside input {
-      background: #fff;
-    }
-
-    aside [type="submit"] {
-      font-family: inherit;
-      border: none;
-      background: #082e4e;
-      color: #fff;
-      cursor: pointer;
-    }
-
-    #loading {
-      display: none;
-      align-items: center;
-      justify-content: center;
-      width: 100%;
-      height: inherit;
-      position: absolute;
-      background-color: rgba(0, 0, 0, 0.5);
-      color: #fff;
-      z-index: 15;
-    }
-
-    #map {
-      flex: 1;
-    }
-
-    #error-message {
-      color: red;
-      display: none;
-    }
-
-    @media (max-width: 768px) {
-      aside {
-        width: 100%;
-        border-right: none;
-        border-bottom: 1px solid #ddd;
-      }
-
-      main {
-        flex-direction: column;
-      }
-    }
-  </style>
+  <title>OpenStreetMap LoCha UI Component</title>
+  <link rel="stylesheet" href="main.css" />
 </head>
 
 <body>
   <header>
     <img src="/teritorio.png" alt="Logo Teritorio" />
-    <h1>OpenStreetMap LoCha Component - Demo</h1>
+    <h1>OSM LoCha UI Component</h1>
   </header>
   <main>
     <aside>
@@ -148,10 +38,13 @@
         </button>
       </form>
     </aside>
-    <div id="loading">Loading data...</div>
-    <div id="map"></div>
+    <section>
+      <div id="app"></div>
+      <div id="map"></div>
+    </section>
   </main>
-  <script type="module" src="index.ts"></script>
+  <div id="loading">Loading data...</div>
+  <script type="module" src="src/index.ts"></script>
 </body>
 
 </html>
