--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/teritorio.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>OpenStreetMap LoCha UI Component</title>
+    <title>OpenStreetMap Logical History</title>
     <style>
       html,
       body {
